Fix toggle comment with space at the start

BUG: 451471